# my-linux

./: .clang-tidy  CMakeLists.txt  LICENSE  README.MD
my_linux/: mli_file.h  mli_system.h  my_linux.h  stdafx.h
my_linux_raw_test/: test_0.cpp
my_linux_test/: example_0.cpp  example_0.h  example_1.cpp  example_1.h  main.cpp  stdafx.h
vcpkg/: vcpkg.json
